# FakeFarsi

./: LICENSE  MANIFEST.in  README.md  data.py  fakefa.py  fakefarsi.py  pyproject.toml  setup.py  اسامی.txt  نام خانوادگی.txt
FakeFarsi/: README.md  fakefarsi.py  pyproject.toml  نام خانوادگی.txt
fakefarsi/: Data.py  data.py  setup.py
fakefarsi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lib/: data.py
