[project]
name = "fakefarsi"
version = "0.0.1"
authors = [
  { name="Mahan Rahmani", email="mahanrahmani777@gmail.com" },
]
description = "A package for generate a fake iranian person information"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent ",
]

[project.urls]
Homepage = "https://github.com/mhnrhmni/FakeFarsi"
Issues = "https://github.com/mhnrhmni/FakeFarsi/issues"
